# wps12th-drf

./: .gitignore  pyproject.toml
app/: Pygments 알아보기.ipynb  Snippet 알아보기.ipynb
app/config/: settings.py  urls.py
app/members/: apis.py  serializer.py  tests.py  urls.py
app/members/migrations/: 0001_initial.py
app/snippets/: admin.py  apis.py  models.py  serializer.py  tests.py  urls.py  views.py
app/snippets/apis/: api_view.py  generics.py  mixins.py  viewsets.py
app/snippets/migrations/: 0001_initial.py
